@@ -8,16 +8,19 @@ import org.springframework.stereotype.Service;
 
 import java.io.Writer;
 import java.math.BigDecimal;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicReference;
 
 @Service
 public class AggregationServiceImpl implements AggregationService {
 
     private static final Logger logger = LogManager.getLogger(AggregationServiceImpl.class);
-    private final AtomicReference<BigDecimal> valueHolder = new AtomicReference<>();
+    private static final AtomicReference<BigDecimal> valueHolder = new AtomicReference<>();
+    private final String writerClassName;
 
-    @Value("${writer-class-name}")
-    private String writerClassName;
+    public AggregationServiceImpl(@Value("${writer-class-name}") String writerClassName) {
+        this.writerClassName = writerClassName;
+    }
 
     @Override
     public void aggregate(BigDecimal bigDecimal) {
@@ -28,11 +31,9 @@ public class AggregationServiceImpl implements AggregationService {
             valueHolder.getAndAccumulate(bigDecimal, BigDecimal::add);
         }
         BigDecimal valueToPrint = valueHolder.get();
-        Class<? extends Writer> writer = WriterTypeEnum.getWriter(writerClassName);
-        if (writer == null) {
-            throw new UnsupportedOperationException(writerClassName + " not supporter");
-        }
-        try (Writer writer1 = writer.newInstance()) {
+        Class<? extends Writer> writer = Optional.ofNullable(WriterTypeEnum.getWriter(writerClassName))
+                .orElseThrow(() -> new UnsupportedOperationException(writerClassName + " not supported"));
+        try (Writer writer1 = writer.getDeclaredConstructor().newInstance()) {
             writer1.write(valueToPrint.intValue());
         } catch (Exception e) {
             throw new RuntimeException(String.format("failed to write value:%s to %s, Exception=%s", valueToPrint, writerClassName, e));
